--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
