--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@heroicons/react": "^2.0.18",
     "@nextui-org/react": "^1.0.0-beta.13",
     "autoprefixer": "10.4.14",
+    "embla-carousel": "^8.0.0-rc12",
+    "embla-carousel-autoplay": "^8.0.0-rc12",
+    "embla-carousel-react": "^8.0.0-rc12",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "firebase": "^9.22.0",
@@ -32,6 +35,7 @@
     "react-multilevel-dropdown": "^4.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-time-picker": "^6.2.0",
+    "react-timer-hook": "^3.0.7",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
     "sass": "^1.63.3",
