--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-time-picker": "^6.2.0",
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^9.1.3",
+    "reactjs-popup": "^2.0.6",
     "reactstrap": "^9.2.0",
     "sass": "^1.63.3",
     "swiper": "^9.4.1",
