--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-multilevel-dropdown": "^4.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-time-picker": "^6.2.0",
