--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/input": "^2.2.4",
     "@nextui-org/react": "^1.0.0-beta.13",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.2",
     "embla-carousel": "^8.0.0-rc12",
     "embla-carousel-autoplay": "^8.0.0-rc12",
     "embla-carousel-react": "^8.0.0-rc12",
@@ -42,7 +46,7 @@
     "reactstrap": "^9.2.0",
     "sass": "^1.63.3",
     "swiper": "^9.4.1",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.3.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
